--- a/resume.html
+++ b/resume.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume</title>
-    <link rel="stylesheet" href="/css/resume.css" />
-    <link rel="stylesheet" href="css/resumeResponsive.css" />
+    <link rel="stylesheet" href="/Portfolio/css/resume.css" />
+    <link rel="stylesheet" href="/Portfolio/css/resumeResponsive.css" />
   </head>
   <body>
     <div class="container">
