--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Portfolio</title>
 
      <link rel="icon" type="image/x-icon" href="/images/Alogo (2).png">
-    <link rel="stylesheet" href="/Portfolio/css/style.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/Portfolio/css/media.css" />
+        <link rel="stylesheet" href="css/style.css" />
+
+    <link rel="stylesheet" href="css/media.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
