add cartoon pic

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <div class="aboutme" id="aboutmee">
         <div class="item cartoonpic">
-          <img src="/images/aboutMemoji.png" height="300px" alt="Pic" />
+          <img src="images/aboutMemoji.png" height="300px" alt="Pic" />
         </div>
         <div class="item aboutDev">
           <h2 class="info">Ajay Birare</h2>
