some images not working

--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
               alt="social icons"
           /></a>
           <a href="#"
-            ><img class="pic3" src="/images/instagram.png" alt="social icons"
+            ><img class="pic3" src="images/instagram.png" alt="social icons"
           /></a>
           <a href="#"
             ><img
               class="pic4"
-              src="/images/facebook-app-symbol.png"
+              src="images/facebook-app-symbol.png"
               alt="social icons"
           /></a>
         </div>
@@ -125,36 +125,36 @@
         <div><h1>SKILLS</h1></div>
         <div class="parent">
           <div class="div1">
-            <img src="/images/letter-c.png" alt="C" />
+            <img src="images/letter-c.png" alt="C" />
             <h4>C</h4>
           </div>
 
           <div class="div2">
-            <img src="/images/java.png" alt="Java" />
+            <img src="images/java.png" alt="Java" />
             <h4>JAVA</h4>
           </div>
           <div class="div3">
-            <img src="/images/html-5.png" alt="HTML" />
+            <img src="images/html-5.png" alt="HTML" />
             <h4>HTMl5</h4>
           </div>
           <div class="div4">
-            <img src="/images/css-3.png" alt="css" />
+            <img src="images/css-3.png" alt="css" />
             <h4>CSS3</h4>
           </div>
           <div class="div5">
-            <img src="/images/bootstrap.png" alt="bootstrap" />
+            <img src="images/bootstrap.png" alt="bootstrap" />
             <h4>BOOTSTRAP</h4>
           </div>
           <div class="div6">
-            <img src="/images/git.png" alt="git" />
+            <img src="images/git.png" alt="git" />
             <h4>GIT</h4>
           </div>
           <div class="div7">
-            <img src="/images/github.png" alt="" />
+            <img src="images/github.png" alt="" />
             <h4>GITHUB</h4>
           </div>
           <div class="div8">
-            <img src="/images/c-.png" alt="C++" />
+            <img src="images/c-.png" alt="C++" />
             <h4>C++</h4>
           </div>
         </div>
@@ -166,7 +166,7 @@
         </div>
         <div class="projectitems">
           <div class="project1 proj">
-            <img src="/images/asset 0.png" alt="" />
+            <img src="images/asset 0.png" alt="" />
             <h4>UsabilityHub</h4>
             <div class="projectlink">
               <a
@@ -179,7 +179,7 @@
             </div>
           </div>
           <div class="project2 proj">
-            <img src="/images/digitallogo.png" alt="" />
+            <img src="images/digitallogo.png" alt="" />
             <h4>Digital Marketing Webinar</h4>
             <div class="projectlink">
               <a target="_blank" href="https://ajay-birare.github.io/Projects/"
@@ -217,21 +217,21 @@
         </div>
         <div class="educationsteps">
           <div class="edu">
-            <img src="/images/degree.png" alt="degree" />
+            <img src="images/degree.png" alt="degree" />
             <h4>Bachelor in Computer Science</h4>
             <h5>SBES College of Science</h5>
             <h5>Maharashtra,India</h5>
             <p>2019-2023</p>
           </div>
           <div class="edu">
-            <img src="/images/high-school.png" alt="HSC" />
+            <img src="images/high-school.png" alt="HSC" />
             <h4>HSC | Science</h4>
             <h4>Renuka Jr. College</h4>
             <h5>Maharashtra,India</h4>
               <p>2016-2018</p>
           </div>
           <div class="edu">
-            <img src="/images/school.png" alt="SSC" />
+            <img src="images/school.png" alt="SSC" />
             <h4>State Secondary Certificate (SSC)</h4>
             <h5>Renuka High School</h5>
             <h5>Maharashtra,India</h5>
@@ -261,7 +261,7 @@
                 target="_blank"
               >
                 <img
-                src="/images//colorimg/linkedin.png"
+                src="images//colorimg/linkedin.png"
                 />
               </a>
               <a
@@ -270,7 +270,7 @@
                 target="_blank"
               >
                 <img
-                src="/images/github.png"
+                src="images/github.png"
                 />
               </a>
             </div>
