add some padding navbar to make it responsive on mobile

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             <a href="#skill">Skill</a>
             <a href="#contacts">Contact</a>
           </div>
+           <div class="box"></div>
+          
         </nav>
       </header>
 
