make project color for dark mode

--- a/index.html
+++ b/index.html
@@ -132,36 +132,36 @@
         <div class="parent">
           <div class="div1">
             <img src="images/letter-c.png" alt="C" />
-            <h4>C</h4>
+            <h4 class="skillName">C</h4>
           </div>
 
           <div class="div2">
             <img src="images/java.png" alt="Java" />
-            <h4>JAVA</h4>
+            <h4 class="skillName">JAVA</h4>
           </div>
           <div class="div3">
             <img src="images/html-5.png" alt="HTML" />
-            <h4>HTMl5</h4>
+            <h4 class="skillName">HTMl5</h4>
           </div>
           <div class="div4">
             <img src="images/css-3.png" alt="css" />
-            <h4>CSS3</h4>
+            <h4 class="skillName">CSS3</h4>
           </div>
           <div class="div5">
             <img src="images/bootstrap.png" alt="bootstrap" />
-            <h4>BOOTSTRAP</h4>
+            <h4 class="skillName">BOOTSTRAP</h4>
           </div>
           <div class="div6">
             <img src="images/git.png" alt="git" />
-            <h4>GIT</h4>
+            <h4 class="skillName">GIT</h4>
           </div>
           <div class="div7">
             <img src="images/github.png" alt="" />
-            <h4>GITHUB</h4>
+            <h4 class="skillName">GITHUB</h4>
           </div>
           <div class="div8">
             <img src="images/c-.png" alt="C++" />
-            <h4>C++</h4>
+            <h4 class="skillName">C++</h4>
           </div>
         </div>
       </div>
@@ -173,7 +173,7 @@
         <div class="projectitems">
           <div class="project1 proj">
             <img src="images/asset 0.png" alt="" />
-            <h4>UsabilityHub</h4>
+            <h4 class="projectName">UsabilityHub</h4>
             <div class="projectlink">
               <a
                 target="_blank"
@@ -186,7 +186,7 @@
           </div>
           <div class="project2 proj">
             <img src="images/digitallogo.png" alt="" />
-            <h4>Digital Marketing Webinar</h4>
+            <h4 class="projectName">Digital Marketing Webinar</h4>
             <div class="projectlink">
               <a target="_blank" href="https://ajay-birare.github.io/Projects/"
                 >Live Link ></a
@@ -196,7 +196,7 @@
           </div>
           <div class="project3 proj">
             <img src="images/abletonlogo.png" alt="" />
-            <h4>Ableton</h4>
+            <h4 class="projectName">Ableton</h4>
             <div class="projectlink">
               <a target="_blank" href="https://ajay-birare.github.io/Abletone/"
                 >Live Link ></a
@@ -205,7 +205,7 @@
           </div>
           <div class="project4 proj">
             <img src="images/abstract.png" alt="" />
-            <h4>Abstract Clone</h4>
+            <h4 class="projectName">Abstract Clone</h4>
             <div class="projectlink">
               <a title="Currentlu not hosted" target="_blank" href="#"
                 >Live Link ></a
@@ -215,7 +215,7 @@
         </div>
       </div>
 
-      <!--  --------Eucation-->
+      <!--  --------Eudcation-->
 
       <div class="education">
         <div class="head">
