add the navbar shadow

--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
           </div>  
         </nav>
       </header>
-
       <!-- content  -->
       <div class="content">
         <div class="img">
           <img src="images/profile3.jpeg" alt="profile" />
+          <!-- <img src="images/profile3-removebg-preview.png" alt="profile" /> -->
+
         </div>
         <div class="about">
           <h2 class="name item">Hello</h2>
@@ -74,6 +75,7 @@
           <a href="#aboutmee"> <h2>About Me ></h2> </a>
         </div>
       </div>
+
       <hr />
 
       <div class="aboutme" id="aboutmee">
